@@ -1,3 +1,9 @@
+2011-11-01  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tkObj.c (GetPixelsFromObjEx): [Bug 3431491]: Use a bit of
+	type hackery to allow numbers to be interpreted as coordinates (most
+	notably on a canvas) without reinterpreting via a string.
+
 2011-10-26  Don Porter  <dgp@users.sourceforge.net>
 
 	* changes:	Updates for 8.5.11.
